# BotBot

./: .gitignore  .gitmodules  .travis.yml  BotBot.py  LICENSE  README.md  defaults.json  pyproject.toml  requirements.txt  setup.py  start_botbot.sh
botbot/: __main__.py  agentid_room.py  botbot.py  botbotbot.py  botcollection.py  botparser.py  euphutils.py  logger.py  longmessage_room.py  main.py  snapshot.py
data/: help.txt  shorthelp.txt
snapshots/: snapshots.txt
source/: __main__.py  agentid_room.py  bot_parser.py  bot_thread.py  botbot.py  botbotbot.py  botcollection.py  botparser.py  euphoria  euphutils.py  logger.py  longmessage_room.py  main.py  snapshot.py
source/euphoria/: LICENSE  __init__.py  chat_room.py  connection.py  execgroup.py  executable.py  nick_room.py  ping_room.py  room.py  user_room.py
tests/: sample_data.py  test_agentid_room.py  test_botbot.py  test_longmessage_room.py
