[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['botbot']

[project]
name = 'botbot'
version = '0.5.7'
description = 'A meta-bot for Euphoria.'
authors = [
  { name='Rishov Sarkar' },
]
readme = 'README.md'
# TODO: add minimum required python version
dependencies = [
  'eupy @ git+https://github.com/ArkaneMoose/EuPy.git@2716bc40d7514726d85f22720a3ec0fc98471a43#egg=eupy-1.2.1',
  'simpleeval >=1.0.0, <=1.0.3',
]
classifiers = [
  'Programming Language :: Python :: 3',
  'Operating System :: OS Independent',
  'Topic :: Communications :: Chat',
  'Topic :: Software Development :: Interpreters',
]
license = 'MIT'
license-files = ['LICEN[CS]E*']

[project.urls]
GitHub = 'https://github.com/ArkaneMoose/BotBot'
Issues = 'https://github.com/ArkaneMoose/BotBot/issues'
'BotBot Wiki' = 'https://github.com/ArkaneMoose/BotBot/wiki'

[project.scripts]
botbot = 'botbot.__main__:main'
